# efor-sarayi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  seed.sh
.github/workflows/: cicd.yaml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_drop_actual_effort.py  003_add_documents_table.py  004_reshape_project_model.py  005_add_plan_effort_risks_questions.py  006_drop_stored_effort_person_days.py
backend/app/: auth.py  config.py  main.py  sse.py
backend/app/models/: project.py
backend/app/routers/: auth.py  chat.py  documents.py  estimation.py  export.py  projects.py
backend/app/schemas/: project.py
backend/app/services/: document_analyzer.py  effort.py  embedding.py  estimator.py  exporter.py  project_chat.py  vector_store.py
backend/tests/: test_document_analyzer.py  test_project_chat.py  test_project_effort.py
docker/: entrypoint.sh  nginx.conf  supervisord.conf
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  http.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: DocumentUpload.tsx  EstimatePdfDocument.tsx  EstimationForm.tsx  EstimationResult.tsx  ExportModal.tsx  ImplementationPlanGantt.tsx  PlanEditor.tsx  ProjectAiChat.tsx  ProjectFilters.tsx  ProjectForm.tsx  ProjectPdfDocument.tsx  ProjectTable.tsx  RiskEditor.tsx  TagInput.tsx
(+24 files in other folders)
